# luaeditor

./: .gitignore  ADEKOLIB_COMPLETE_DOCUMENTATION.md  CNC_TOOLS_GUIDE.md  INTELLISENSE_FEATURES.md  INTELLISENSE_IMPLEMENTATION_SUMMARY.md  KEYBOARD_SHORTCUTS.md  LAYER_ANALYSIS_REPORT.md  LAYER_DETECTION_IMPROVEMENTS.md  README.md  README.tr.md  TOOLTIPPING_FEATURES.md  analyze_layers.js  csg_prompt.md  generate-icon.js  index.html  package-lock.json  package.json  test-alias.lua  test-big-text-visualization.lua  test-browse-folder.md  test-colorful-syntax.lua  test-lua-sample.lua  test_layer.lua  test_module_loading.lua  test_visualization.lua  tool_layer_analysis.csv  tsconfig.json  vite.config.ts
docs/: tool-mesh-creation.md
scripts/: setup-lua.cjs
src/: App.vue  main.ts  monaco-env.ts  shims-vue.d.ts  style.css  test-theme.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lua_engine.rs  main.rs
src/components/: AboutModal.vue  AutoToolDetector.vue  CNCToolEditor.vue  CNCToolSelector.vue  ContextMenu.vue  DebugConsole.vue  DiffEditor.vue  Editor.vue  EditorGroup.vue  EditorTabs.vue  FileExplorer.vue  FunctionBrowser.vue  KeyboardShortcutsModal.vue  MenuBar.vue  NotificationSystem.vue  SettingsModal.vue  SplitEditor.vue  ThemeSelector.vue  ThreeCanvas.vue  Toolbar.vue  TurtleCanvas.vue  VisualizationPanel.vue
src/composables/: useEditorState.ts  useI18n.ts  useKeyboardShortcuts.ts  useNotifications.ts
src/data/: adekoFunctions.en.ts  adekoFunctions.tr.ts  adekoFunctions.ts  adekoFunctionsComplete.ts  luaStandardLibrary.ts
src/i18n/: index.ts
(+12 files in other folders)
